--- a/example/config.json
+++ b/example/config.json
@@ -3,14 +3,29 @@
     "output_dir": "./../example/result",
     "tables": [
       {
+        "name": "users",
+        "query": "select firstname, lastname, phone, email, birthday from users",
+        "max_lines": 1000
+      },
+      {
+        "name": "vilages",
+        "query": "select name, population from vilages",
+        "max_lines": 1000
+      },
+      {
         "name": "people",
-        "query": "select firstname, lastname, phone, email, birthday from people",
-        "max_lines": 1
+        "query": "select id, name, lastname, birthday, some_flag, created from people",
+        "max_lines": 1000
       },
       {
         "name": "cities",
-        "query": "select name, population from cities",
-        "max_lines": 2
+        "query": "select id, name, country_id, created from cities",
+        "max_lines": 1000
+      },
+      {
+        "name": "countries",
+        "query": "select id, name, created from countries",
+        "max_lines": 1000
       }
     ]
   }
